--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#" class="nav-cta">Book Free Advising</a></li>
+                    <li><a href="mailto:CollegeAdvisingConsultants@gmail.com?subject=Book Free Advising Session&body=Hi! I'd like to book a free advising session." class="nav-cta">Book Free Advising</a></li>
                 </ul>
             </div>
         </div>
@@ -548,7 +548,7 @@
                 <h1>Personalized College Advising – 100% Free</h1>
                 <p>Expert guidance to help you plan the perfect schedule, graduate on time, and save money along the way.</p>
                 <div class="hero-buttons">
-                    <a href="#" class="btn btn-primary">Get Started Free</a>
+                    <a href="mailto:CollegeAdvisingConsultants@gmail.com?subject=Free College Advising Consultation&body=Hi! I'm interested in your free college advising services." class="btn btn-primary">Get Started Free</a>
                     <a href="#how-it-works" class="btn btn-secondary">How It Works</a>
                 </div>
             </div>
@@ -594,7 +594,7 @@
                         <li>Financial aid alignment</li>
                         <li>Real ongoing advising, not a rushed 30-minute appointment</li>
                     </ul>
-                    <a href="#" class="btn btn-primary">Get Your Free Plan</a>
+                    <a href="mailto:CollegeAdvisingConsultants@gmail.com?subject=Request Free Academic Plan&body=Hi! I'd like to get my free personalized academic plan." class="btn btn-primary">Get Your Free Plan</a>
                 </div>
                 <div class="help-image">
                     <img src="https://images.unsplash.com/photo-1498243691581-b145c3f54a5a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Student studying in library">
@@ -642,7 +642,7 @@
                     <h2>Help Us Grow — While We Help You Succeed</h2>
                     <p>Our company is currently in development, and we're looking for motivated students who want free expert advising while helping us build experience, testimonials, and best-practices along the way.</p>
                     <p>You get personalized schedule planning and degree support — we get smarter and stronger as a team.</p>
-                    <a href="#" class="btn btn-white">Become a Pilot Program Student (Free)</a>
+                    <a href="mailto:CollegeAdvisingConsultants@gmail.com?subject=Join Pilot Program&body=Hi! I'm interested in joining your free pilot program." class="btn btn-white">Become a Pilot Program Student (Free)</a>
                     <div class="pilot-badge">💡 Limited enrollment — build your future and ours</div>
                 </div>
                 <div class="pilot-image">
@@ -696,7 +696,7 @@
                 </div>
                 <div class="footer-contact">
                     <a href="mailto:CollegeAdvisingConsultants@gmail.com">CollegeAdvisingConsultants@gmail.com</a>
-                    <a href="#">Book Free Advising</a>
+                    <a href="mailto:CollegeAdvisingConsultants@gmail.com?subject=Book Free Advising&body=Hi! I'd like to book a free advising session.">Book Free Advising</a>
                 </div>
             </div>
             <div class="footer-bottom">
